Do not popup snippets based on editor text with default implementation

BUG: 462383